--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
   "presets": [
-    ["@babel/preset-env", { "modules": false }],
-    ["@babel/preset-react"]
+    [
+      "@babel/preset-env",
+      { "modules": false, "targets": { "node": "current" } }
+    ],
+    ["@babel/preset-react"],
+    ["@babel/preset-typescript"]
   ],
   "plugins": [["transform-async-to-promises"]]
 }
