--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@babel/preset-react": "^7.10.4",
     "@ice/spec": "^1.0.1",
     "@jest/core": "^26.3.0",
-    "babel-jest": "^26.3.0",
     "babel-plugin-transform-async-to-promises": "^0.8.15",
     "jest": "^26.3.0",
     "parcel-bundler": "^1.12.4",
@@ -34,15 +33,18 @@
     "typescript": "^3.9.7"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.12.1",
     "@testing-library/react-hooks": "^3.3.0",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.46",
+    "babel-jest": "^26.6.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
     "jest-enzyme": "^7.1.2",
     "react-test-renderer": "^16.13.1",
-    "ts-jest": "^26.2.0"
+    "ts-jest": "^26.2.0",
+    "ts-node": "^9.0.0"
   }
 }
