--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [10.x, 12.x, 14.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
@@ -22,10 +22,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install
-        run: npm i -g npminstall && npminstall
-      - name: CI Preparation
-        run: npm run ci
+        run: npm install
         env:
           CI: true
       - name: Unit Test
         run: npm run test
+      - name: Codecov
+        run: bash <(curl -s https://codecov.io/bash)
